test/yaml/testdata/input/ssl-passthrough/ssl-passthrough-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-passthrough-wildcard-ingress
  namespace: namespace1
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.example.com"
    secretName: wildcard-tls-secret
  rules:
  - host: "*.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wildcard-service
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: wildcard-service
  namespace: namespace1
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: wildcard-app
